syntax = "proto3";

package fleetspeak.socketservice;

option go_package = "github.com/google/fleetspeak/fleetspeak/src/client/socketservice/proto/fleetspeak_socketservice";

// The configuration information expected by socketservice.Factory in
// ClientServiceConfig.config.
message Config {
  // The given api_proxy_path may be an arbitrary filesystem path and will be
  // used to pair the daemon service with its non-child client process.
  //
  // On Unix in particular, a Unix socket will be created at this path and used
  // for communication between FS and the client.
  //
  // Side note: FS requires the proxy's parent directory's perms to be 0700.
  // If the parent directory doesn't exist, FS will mkdir -p it with perms set
  // to 0700.
  string api_proxy_path = 1;

  // By default, socket services report resource usage every 10 minutes. This
  // flag disables this if set.
  bool disable_resource_monitoring = 2;

  // How many samples to aggregate into a report when monitoring resource usage.
  // If unset, defaults to 20.
  int32 resource_monitoring_sample_size = 3;

  // How long to wait between resource monitoring samples. If unset, defaults to
  // 30 seconds.
  int32 resource_monitoring_sample_period_seconds = 4;
}
